[gd_scene load_steps=11 format=3 uid="uid://cw3w2bmj0o33p"]

[ext_resource type="Script" path="res://Main/Versus Mode/versus.gd" id="1_6vcqg"]
[ext_resource type="Texture2D" uid="uid://bpgeis3b7hgg4" path="res://Main/Assets/fondo espacial.png" id="2_gxwov"]
[ext_resource type="PackedScene" uid="uid://577vsua6whux" path="res://Main/Single Mode/Scenes/Player.tscn" id="3_uqjmf"]
[ext_resource type="PackedScene" uid="uid://cb8rn3ss7mr02" path="res://Main/Versus Mode/Player2.tscn" id="4_bfcep"]
[ext_resource type="PackedScene" uid="uid://chefv18bcq2st" path="res://Main/Single Mode/Scenes/asteroid.tscn" id="4_jq8ak"]
[ext_resource type="PackedScene" uid="uid://dv2bpmef5bils" path="res://Main/Single Mode/Scenes/enemyship.tscn" id="5_hrfp5"]
[ext_resource type="PackedScene" uid="uid://dyaj50btqaxyc" path="res://Main/Single Mode/Scenes/asteroids_2.tscn" id="6_m4ot6"]
[ext_resource type="PackedScene" uid="uid://btlucany8pck7" path="res://Main/Single Mode/Scenes/enemyship_2.tscn" id="7_3x0il"]
[ext_resource type="FontFile" uid="uid://c6iq4etgeu2o2" path="res://Main/Assets/PressStart2P-Regular.ttf" id="8_l8hwu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwglt"]
size = Vector2(9.06552, 1326.5)

[node name="Versus" type="Node2D"]
script = ExtResource("1_6vcqg")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 1.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 656.0
texture = ExtResource("2_gxwov")
expand_mode = 1
stretch_mode = 6

[node name="Player" parent="." groups=["player"] instance=ExtResource("3_uqjmf")]
position = Vector2(960, 584)

[node name="Player2" parent="." groups=["player"] instance=ExtResource("4_bfcep")]
position = Vector2(200, 568)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Asteroid" parent="Timer" groups=["enemy"] instance=ExtResource("4_jq8ak")]

[node name="enemyship" parent="Timer" groups=["enemy"] instance=ExtResource("5_hrfp5")]
position = Vector2(-56, -96)

[node name="Asteroid2" parent="Timer" groups=["enemy"] instance=ExtResource("6_m4ot6")]
position = Vector2(864, -40)

[node name="enemyship2" parent="Timer" groups=["enemy"] instance=ExtResource("7_3x0il")]
position = Vector2(16, -24)

[node name="Limits" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="LeftLimit" type="StaticBody2D" parent="Limits"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/LeftLimit"]
texture_filter = 1
position = Vector2(0.75, 253)
shape = SubResource("RectangleShape2D_fwglt")

[node name="RightLimit" type="StaticBody2D" parent="Limits"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/RightLimit"]
texture_filter = 1
position = Vector2(1152, 256)
shape = SubResource("RectangleShape2D_fwglt")

[node name="BottomLimit" type="StaticBody2D" parent="Limits"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/BottomLimit"]
texture_filter = 1
position = Vector2(577.5, 653.937)
rotation = 1.5708
shape = SubResource("RectangleShape2D_fwglt")

[node name="UpperLimit" type="StaticBody2D" parent="Limits"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/UpperLimit"]
texture_filter = 1
position = Vector2(488.75, -3.46964)
rotation = 1.5708
shape = SubResource("RectangleShape2D_fwglt")

[node name="HUD" type="Node2D" parent="."]

[node name="Puntos" type="Label" parent="HUD"]
modulate = Color(1, 1, 1, 0.560784)
offset_left = 15.0
offset_top = 14.0
offset_right = 143.0
offset_bottom = 42.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_l8hwu")
theme_override_font_sizes/font_size = 10
text = "Points: "

[node name="PuntosCantidad" type="Label" parent="HUD"]
modulate = Color(1, 1, 1, 0.560784)
offset_left = 86.0
offset_top = 14.0
offset_right = 191.0
offset_bottom = 34.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_l8hwu")
theme_override_font_sizes/font_size = 10
text = "0"

[node name="Damage" type="Label" parent="HUD"]
modulate = Color(1, 1, 1, 0.560784)
offset_left = 15.0
offset_top = 32.0
offset_right = 143.0
offset_bottom = 60.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_l8hwu")
theme_override_font_sizes/font_size = 10
text = "Damage:"

[node name="DamageCantidad" type="Label" parent="HUD"]
modulate = Color(1, 1, 1, 0.560784)
offset_left = 86.0
offset_top = 32.0
offset_right = 110.0
offset_bottom = 52.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_l8hwu")
theme_override_font_sizes/font_size = 10
text = "0
"

[node name="HUD2" type="Node2D" parent="."]
position = Vector2(1000, 0)

[node name="Puntos" type="Label" parent="HUD2"]
modulate = Color(1, 1, 1, 0.560784)
offset_left = 15.0
offset_top = 14.0
offset_right = 143.0
offset_bottom = 42.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_l8hwu")
theme_override_font_sizes/font_size = 10
text = "Points: "

[node name="PuntosCantidad" type="Label" parent="HUD2"]
modulate = Color(1, 1, 1, 0.560784)
offset_left = 86.0
offset_top = 14.0
offset_right = 191.0
offset_bottom = 34.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_l8hwu")
theme_override_font_sizes/font_size = 10
text = "0"

[node name="Damage" type="Label" parent="HUD2"]
modulate = Color(1, 1, 1, 0.560784)
offset_left = 15.0
offset_top = 32.0
offset_right = 143.0
offset_bottom = 60.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_l8hwu")
theme_override_font_sizes/font_size = 10
text = "Damage:"

[node name="DamageCantidad" type="Label" parent="HUD2"]
modulate = Color(1, 1, 1, 0.560784)
offset_left = 86.0
offset_top = 32.0
offset_right = 110.0
offset_bottom = 52.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_l8hwu")
theme_override_font_sizes/font_size = 10
text = "0
"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
